# incremental-capacity-curves

./: .gitignore  LICENSE  README.md  dqdvs.py  fig_dqdvs_histogram_several_materials.ipynb  fig_dqdvs_method_comparison_lfp_non_monotonicity.ipynb  fig_dqdvs_method_histogram_graphite.ipynb  fig_dqdvs_variety.ipynb  fig_graphical_abstract.ipynb  pyproject.toml  requirements.txt
