[project]
name = "incremental-capacity-curves"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastexcel>=0.19.0",
    "ipykernel>=7.2.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "scipy>=1.17.1",
]
